--- a/app.css
+++ b/app.css
@@ -453,10 +453,16 @@ h2 {
     padding: 7rem 1rem;
     position: relative;
 }
+.contenido-cuadro {
+    position: absolute;
+    width: 90%;
+    top: 20%;
+    left: 4%;
+}
 .contenido-image {
     position: absolute;
-    top: 23%;
-    left: 31.5%;
+    top: 6%;
+    left: 27.5%;
 }
 .contenido-image h1 {
     background-color: var(--blanco);
