cambios en button

--- a/app.css
+++ b/app.css
@@ -344,7 +344,7 @@ h2 {
 }
 
 .header {
-    background-image: url(/public/backgroundHome.png);
+    background-image: url(/public/Mask-group-2.png);
     height: 58rem;
     background-size: cover;
     background-repeat: no-repeat;
